--- a/PsuAngularNetCore2/ClientApp/app/components/home/home.component.html
+++ b/PsuAngularNetCore2/ClientApp/app/components/home/home.component.html
@@ -10,8 +10,8 @@
                ngModel #first="ngModel" >
     </div>
     <div class="form-group">
-        <label for="firstName">First Name:</label>
-        <input type="text" class="form-control" id="firstName" name="Cn"
+        <label for="fullName">Full Name:</label>
+        <input type="text" class="form-control" id="fullName" name="Cn"
                ngModel>
     </div>
     <div class="form-group">
