--- a/PsuAngularNetCore2/ClientApp/app/components/home/home.component.html
+++ b/PsuAngularNetCore2/ClientApp/app/components/home/home.component.html
@@ -33,10 +33,10 @@
 <table class='table' *ngIf="Shorty">
     <thead>
     <tr>
-        <th>Date</th>
-        <th>Temp. (C)</th>
-        <th>Temp. (F)</th>
-        <th>Summary</th>
+        <th>Name</th>
+        <th>Email</th>
+        <th>MailId(F)</th>
+        <th>Title</th>
     </tr>
     </thead>
     <tbody>
