--- a/PsuAngularNetCore2/ClientApp/app/components/home/home.component.html
+++ b/PsuAngularNetCore2/ClientApp/app/components/home/home.component.html
@@ -27,16 +27,22 @@
     <button type="submit" class="btn btn-default">Submit</button>
 </form>
 
+<p *ngIf="!Shorty"><em>Waiting for submission....</em></p>
 
-<p *ngIf="!Shorty"><em>Loading...</em></p>
-
-<table class='table' *ngIf="Shorty">
+<table class='table table-condensed table-striped table-bordered' *ngIf="Shorty">
     <thead>
     <tr>
         <th>Name</th>
         <th>Email</th>
-        <th>MailId(F)</th>
+        <th>MailId</th>
         <th>Title</th>
+        <th>Admin Area</th>
+        <th>Campus</th>
+        <th>Curriculum</th>
+        <th>URL</th>
+        <th>Telephone Number</th>
+        <th>Countries</th>
+        <th>Languages</th>
     </tr>
     </thead>
     <tbody>
@@ -45,6 +51,13 @@
         <td>{{ Short.email }}</td>
         <td>{{ Short.mailId }}</td>
         <td>{{ Short.title }}</td>
+        <td>{{ Short.adminArea }}</td>
+        <td>{{ Short.campus }}</td>
+        <td>{{ Short.curriculum }}</td>
+        <td>{{ Short.url }}</td>
+        <td>{{ Short.telephoneNumber }}</td>
+        <td>{{ Short.countries }}</td>
+        <td>{{ Short.languages }}</td>
     </tr>
     </tbody>
 </table>
