Started to set up short vs long call

--- a/PsuAngularNetCore2/ClientApp/app/components/home/home.component.html
+++ b/PsuAngularNetCore2/ClientApp/app/components/home/home.component.html
@@ -24,6 +24,12 @@
         <input type="email" class="form-control" id="e-mail" name="Mail"
                ngModel>
     </div>
+    <div class='form-group'>
+        <select name="full"  class="dropdown" ngModel>
+            <option name="shortDrop">Short</option>
+            <option name="longDrop">Long</option>
+        </select>
+    </div>
     <button type="submit" class="btn btn-default">Submit</button>
 </form>
 
