Small Updates for the Enum

--- a/PsuAngularNetCore2/ClientApp/app/components/home/home.component.html
+++ b/PsuAngularNetCore2/ClientApp/app/components/home/home.component.html
@@ -25,7 +25,8 @@
                ngModel>
     </div>
     <div class='form-group'>
-        <select name="full"  class="dropdown" ngModel>
+        <label for="full">Retrieve Length</label>
+        <select id="full" name="full" class="dropdown" ngModel required>
             <option name="shortDrop">Short</option>
             <option name="longDrop">Long</option>
         </select>
